--- a/index.html
+++ b/index.html
@@ -2,12 +2,28 @@
 <html>
 <head>
     <title>WTFJPP</title>
+
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+
 </head>
 <body>
 
 
 <p>kill me please</p>
 
+<button type="button" id="btn1" class="btn btn-primary">Primary</button>
+<button type="button" id="btn2" class="btn btn-secondary">Secondary</button>
+<button type="button" id="btn3" class="btn btn-success">Success</button>
+<button type="button" id="btn4" class="btn btn-danger">Danger</button>
+<button type="button" id="btn5" class="btn btn-warning">Warning</button>
+<button type="button" id="btn6" class="btn btn-info">Info</button>
+<button type="button" id="btn7" class="btn btn-dark">Dark</button>
 
+
+        <script src="main.bundle.js"></script>
 </body>
 </html>
